--- a/MilkTea/MilkTea/AdminProfile.resx
+++ b/MilkTea/MilkTea/AdminProfile.resx
@@ -57,32 +57,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        /9j/4AAQSkZJRgABAQEASABIAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
-        DhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQUFBQUFBQU
-        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wAARCABDACwDAREAAhEBAxEB/8QA
-        HQABAAEEAwEAAAAAAAAAAAAABwgAAgMFAQQGCf/EADAQAAECBAQDBwQDAQAAAAAAAAECAwAEBREGBxIh
-        EzFRCCI0QWFxgRQjodEJscHx/8QAGwEAAQUBAQAAAAAAAAAAAAAABQABAgQGAwf/xAAkEQACAgICAgIC
-        AwAAAAAAAAAAAQIDBBESIQUxQVETIjIz8P/aAAwDAQACEQMRAD8A+qDjiWkFSuQhCNNVcaUShy6nqhVJ
-        WTbCSrU+6ECw584baHSb9Ba32y8nHJ1qVGOKaH3F6BqcsAfU+Q94bkiX45fQj0TMrC2ImkuUyv0+fSrk
-        ZeYSu+9vIw3OP2Nxa+DfInWlqSkK3Pna0T99kTsbQhHTrBWKc9w91223tvEZb0+I69kDe0bkzmNmxiqY
-        puHqyyzRuFxFMzLmk8Xfue3r6wGhbGO0/YUVbSTSIhyH8fOa1cqU+l9qVpjbb+niTDli4m/eKT5i0d55
-        EKySjJjTkn2J8S5fYzVOYnxXLtUOUsqUUxMq1qUNwCm8VZ5anHpE1X32T9ytqzk9MGXYm0z8jL2Rxkm/
-        e6Xi1hzsku/RRyIxi+hTF7QUKZhnvDL+IQggrsshVQeaLAUq5JcOwA9+sYrIhFWzTejT0ybri0gxxNSE
-        yku4njOdwnSrWbmKErG5FyNcVHeiPOYDk6mpSwYLrjTTmtzU8UgDr626QXx9Ndg25PfRMLsp0/6TL9h4
-        nUqYmFEqtzsB+4O4X9ewTlL99DtcwQKhhn/Cr+P7hCDLEACKm8AB1IPntGPzklkSNLh/tT18BNjiosNy
-        ruv7a9xw7bg/qM/flY+PJKcl3/vRblkV1w1N6YA1xKKi+gOArF9d0nbaDVMk484PaZV6tXT2TWyDlPoc
-        uqGi1taS5a/X/nKNVhrVKYByHuxioNxFwrmGoeEX8Qt6HCvHa1MTD3DVZ1TWoDrGJ87yrUnH3xDOPJrG
-        bh7I9Y0qMnKi7yn2ZlRICQjVr39xaPEsbIpjZys2pN6+zM3y5/zbYVcbiTTimkEJUonR0IUR+ecek+Fs
-        du460kF/GWyaa+CfOV8oZPCFBZI0kMJuI9TojwrSOFr3NnuxsOf4juczDUPCL/2EIM8cspE5LuKHe4ZS
-        IzHl0lOO/kOeOXKDgwUx5T23GEfabdU2VFKlAXF488n4uLs3HXTeuvs5X+K5y3F9A83IBFSbZSdS3HAk
-        kDqY1GJjRx4KKe2WqaIYtbUSfeHWPpZSnM2sENoH4jfw6gkAJPcmz0ZiZEw1Dwi/iEIOsfpCZaXWTyJT
-        eAHmI7hGQZ8a9TlEFMaqVw1WIMZaPsPv0GeGZQz+OqTLkAlycbHxqF4LUR5Tigbc9QZOiSTofYSNrWHT
-        yjYrpaMzvZuhyF4cRZOMqmJdTaXOGo8lWvaEI0M/hM1OWLMxOa03uPspuIr3UwvXGZ1qtnTLkjxFXyBl
-        quCF1l5tJ8ksJ/cCX4ive+QSXkpta0VhPs7UXClSRUG5hU5PNnU27MNJOk9QLxfpw66dP2U7cmdi0Ikv
-        Sn2H0uKnNaUm+nhJH5i+VF6NoLEQhF8MxFsO0iKb2cCG0h2UdodJD7K6iG+SKeygbXhyR//Z
-</value>
-  </data>
+  <metadata name="sqlCommand1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
